refactor: return job names as part of job upsert response
